test/kobra-code/syntax-errors/multioverload.ks
$ x = -27 // Look at this sucky program!
x *** y + z *** 10

//  This is a comment.
//  This is awesome.
//  This is here for a reason.
